--- a/MultiLanguageWebApplication/MultiLanguageWebApplication.csproj
+++ b/MultiLanguageWebApplication/MultiLanguageWebApplication.csproj
@@ -45,6 +45,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Dapper.2.0.123\lib\net461\Dapper.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -120,20 +123,38 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Common\ConfigSettings\ConfigSettings.AppSettings.cs" />
+    <Compile Include="Common\ConfigSettings\ConfigSettings.Connection.cs" />
+    <Compile Include="Common\Logger\Logger.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MultiLanguageController.cs" />
+    <Compile Include="DataAccess\MultiLanguageDA.cs" />
+    <Compile Include="DTO\LanguageDetailsDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Model\LanguageDetailsModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service\MultiLanguageService.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\css\bootstrap.css" />
+    <Content Include="Content\css\buttons.bootstrap4.min.css" />
+    <Content Include="Content\css\dataTables.bootstrap4.min.css" />
     <Content Include="Content\css\MultiLanguage.css" />
+    <Content Include="Content\css\responsive.bootstrap4.min.css" />
     <Content Include="Content\js\bootstrap.js" />
+    <Content Include="Content\js\dataTables.bootstrap4.min.js" />
+    <Content Include="Content\js\dataTables.buttons.min.js" />
+    <Content Include="Content\js\dataTables.responsive.min.js" />
     <Content Include="Content\js\fontawesome.js" />
     <Content Include="Content\js\jquery-3.3.1.slim.js" />
+    <Content Include="Content\js\jquery.dataTables.min.js" />
+    <Content Include="Content\js\jquery.js" />
     <Content Include="Content\js\popper.js" />
+    <Content Include="Content\js\responsive.bootstrap4.min.js" />
     <Content Include="Content\js\solid.js" />
+    <Content Include="Content\js\Validation.js" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -155,6 +176,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="Views\MultiLanguage\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
